Feat: add feat authentication

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 
 DATABASE_URL="postgresql://neondb_owner:DxR26bqTKsOk@ep-falling-paper-a5lmb72r.us-east-2.aws.neon.tech/neondb?sslmode=require"
+
+# CLERK
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_dXNlZnVsLWJ1enphcmQtODUuY2xlcmsuYWNjb3VudHMuZGV2JA
+CLERK_SECRET_KEY=sk_test_EpgBaIkgjW4Yc1KyUbdZZNjWetwBxV6JnFEjDPeai3
