chore: add docker container DB

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 
-DATABASE_URL="postgresql://neondb_owner:DxR26bqTKsOk@ep-falling-paper-a5lmb72r.us-east-2.aws.neon.tech/neondb?sslmode=require"
+DATABASE_URL="postgresql://postgres:password@localhost:5432/finance-ai"
 
 # CLERK
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_dXNlZnVsLWJ1enphcmQtODUuY2xlcmsuYWNjb3VudHMuZGV2JA
